--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>FERDI</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">FERDI</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -138,7 +138,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.kardswebsite.com</span>
+   					<span>www.ferdinandloesch.cf</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
@@ -1002,8 +1002,7 @@
 
       	<div class="col-six tab-full">
 	      	<div class="copyright">
-		        	<span>© Copyright Kards 2016.</span> 
-		        	<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>	         	
+		        		         	
 		         </div>		                  
 	      	</div>
 
