--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<li><a href="styles.html" title="">Blog</a></li>
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -64,9 +64,9 @@
 
 	<!-- intro section
    ================================================== -->
-   <section id="intro">   
+   <section id="intro">
 
-   	<div class="intro-overlay"></div>	
+   	<div class="intro-overlay"></div>
 
    	<div class="intro-content">
    		<div class="row">
@@ -74,24 +74,24 @@
    			<div class="col-twelve">
 
 	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Ferdinand Loesch.</h1>
+	   			<h1>I'm Ferdinand Loesch</h1>
 
 	   			<p class="intro-position">
 	   				<span>Full stack Developer</span>
-	   				<span>UI/UX Designer</span> 
+	   				<span>UI/UX Designer</span>
 	   			</p>
 
 	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
 
-	   		</div>  
-   			
-   		</div>   		 		
-   	</div> <!-- /intro-content --> 
+	   		</div>
 
-   	<ul class="intro-social">        
+   		</div>
+   	</div> <!-- /intro-content -->
+
+   	<ul class="intro-social">
          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      </ul> <!-- /intro-social -->      	
+      </ul> <!-- /intro-social -->
 
    </section> <!-- /intro -->
 
@@ -110,7 +110,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
+   				<p class="lead"> I'm a passionate CS Student and iOS Developer. With the great interest in Computer-vision, Machine learning, iOT and Robotics with my major currently focusing in this field of study.</p>
    			</div>   			
 
    		</div>   		
@@ -121,7 +121,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p>i0S/MacOS Developer skilled at technical leadership, communication and presentations. Experienced in Full stack project development</p>
 
    			<ul class="info-list">
    				<li>
@@ -152,7 +152,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+   			<p> I'm a quick learner who loves working in teams with most my team working experience gained in hackathons. I am also proficient in a wide range of programming languages</p>
 
 				<ul class="skill-bars">
 				   <li>
