--- a/styles.html
+++ b/styles.html
@@ -70,7 +70,7 @@
 						<li><a href="index.html#portfolio" title="">Portfolio</a></li>
 						<li><a href="index.html#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<li><a href="styles.html" title="">Blog</a></li>
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -78,41 +78,7 @@
    	</div> <!-- /row --> 		
    </header> <!-- /header -->
 
-	<!-- intro section
-   ================================================== -->
-   <section id="intro">   
 
-   	<div class="intro-overlay"></div>	
-
-   	<div class="intro-content">
-   		<div class="row">
-
-   			<div class="col-twelve">
-
-	   			<h5>Hello, World.</h5>
-	   			<h1>I'm Juan Dela Cruz.</h1>
-
-	   			<p class="intro-position">
-	   				<span>Front-end Developer</span>
-	   				<span>UI/UX Designer</span> 
-	   			</p>
-
-	   			<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
-
-	   		</div>  
-   			
-   		</div>   		 		
-   	</div> <!-- /intro-content --> 
-
-   	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-      </ul> <!-- /intro-social -->      	
-
-   </section> <!-- /intro -->
 
 
    <!-- Style Demo
@@ -123,7 +89,7 @@
 
    		<div class="col-twelve">
 
-   			<h1>Style Guide.</h1>
+   			<h1>Welcome to my blog</h1>
 
    			<p class="lead">Lorem ipsum Officia elit ad tempor dolore est ex incididunt incididunt occaecat culpa deserunt sunt labore in cillum ullamco magna in Excepteur consequat in reprehenderit proident mollit incididunt officia commodo.
    			Duis ea officia sed dolor pariatur enim dolore dolore quis incididunt nulla exercitation commodo veniam et ea incididunt.</p>   			
