--- a/index.html
+++ b/index.html
@@ -89,8 +89,12 @@
    	</div> <!-- /intro-content -->
 
    	<ul class="intro-social">
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://www.facebook.com/ferdinand.losch"><i class="fa fa-facebook"></i></a></li>
+         <li><a href="https://www.instagram.com/ferdinand_loesch/"><i class="fa fa-instagram"></i></a></li>
+		 <li><a href="https://github.com/ferdinandl007"><i class="fa fa-github"></i></a></li>
+		 <li><a href="https://twitter.com/FerdinandLoe"><i class="fa fa-twitter"></i></a></li>
+		 <li><a href="https://www.linkedin.com/in/ferdinand-loesch/"><i class="fa fa-linkedin"></i></a></li>
+
       </ul> <!-- /intro-social -->
 
    </section> <!-- /intro -->
@@ -156,25 +160,29 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent50"><span>50%</span></div>
-				   	<strong>HTML5</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
-				   </li>
-				   <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
-				   </li>
-				   <li>
 				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<strong>Swift</strong>
 				   </li>
-				   <li>
 
-				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   <li>
+				   	<div class="progress percent90"><span>90%</span></div>
+				   	<strong>Java</strong>
+				   </li>
+
+
+					<li>
+						<div class="progress percent75"><span>75%</span></div>
+						<strong>Python</strong>
+					</li>
+
+					<li>
+						<div class="progress percent75"><span>75%</span></div>
+						<strong>C and C++</strong>
+					</li>
+
+				   <li>
+				   	<div class="progress percent50"><span>50%</span></div>
+				   	<strong>Objective-C</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -942,9 +950,9 @@
    			<h5>Where to find me</h5>
 
    			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
+				Lange Straße 16<br>
+				19071 Grambow<br>
+				Germany
             </p>
 
    		</div>
@@ -970,9 +978,9 @@
 
    			<h5>Call Me At</h5>
 
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
+   			<p>DE Phone: (+49) 176 81976268‬<br>
+				UK Phone: (+44) 7492 266341‬<br>
+
 			   </p>
 
    		</div>
@@ -990,12 +998,12 @@
 
      		<div class="col-six tab-full pull-right social">
 
-     			<ul class="footer-social">        
-			      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-			      <li><a href="#"><i class="fa fa-behance"></i></a></li>
-			      <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			      <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-			      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+     			<ul class="footer-social">
+					<li><a href="https://www.facebook.com/ferdinand.losch"><i class="fa fa-facebook"></i></a></li>
+					<li><a href="https://www.instagram.com/ferdinand_loesch/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://github.com/ferdinandl007"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://twitter.com/FerdinandLoe"><i class="fa fa-twitter"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/ferdinand-loesch/"><i class="fa fa-linkedin"></i></a></li>
 			   </ul> 
 	      		
 	      </div>
