--- a/index.html
+++ b/index.html
@@ -457,9 +457,9 @@
 	                  <a href="#modal-05" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
+	                     		<h3 class="folio-title">Project EagleEye</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  Robotics Systems
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -473,9 +473,9 @@
 	                  <a href="#modal-06" class="overlay">
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
-	                     		<h3 class="folio-title">Salad</h3>	     					    
+	                     		<h3 class="folio-title">Room lights</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Branding
+		     					       	  ios and iot development
 		     					      </span>		     		
 		     					   </div>	                      	
 	                     </div>                    
@@ -493,7 +493,22 @@
 
 					   <div class="description-box">
 					      <h4>Touch Pong</h4>		      
-					      <p>Touch Pong is the first game EVER brought to the Mac App Store to use the brand new Touch Bar. Pong - one of the first games ever created, brought to you using the newest apple hardware</p>
+					      <p>Touch Pong is the first game EVER brought to the Mac App Store to use the brand new Touch Bar. Pong - one of the first games ever created, brought to you using the newest apple hardware 
+                           FEATURED ON: 
+                              Venture Beat
+                              "If you have a new MacBook Pro with a Touch Bar, then there’s a great new game for you to play. It’s a variation on Pong, the Atari classic from the 1970s."
+
+                              Macworld
+                              "Ferdinand Loesch’s TouchBar Pong turns the new MacBook Pro’s Touch Bar into a modern take on the classic video game Pong."
+                              "a perfect way to kill some time and play with Apple’s latest innovation!"
+
+                              CNET
+                              "This is by far the funnest of the group, and works well enough to play for an extended amount of time."
+
+                              Popular Mechanics
+                              "Pong is one of those classic games that never dies, it just gets reborn into different forms. In this case, it's reborn on the Macbook Touch Bar. Control your paddle with the touch bar, or for less fun, with the arrow keys."
+
+</p>
 
 					      <div class="categories">mac OS Development</div>			               
 					   </div>
@@ -513,7 +528,15 @@
 
 					   <div class="description-box">
 					      <h4>Augmentify</h4>		      
-					      <p>If you are new in a city - whether as a tourist, a workshop participant or a new inhabitant - it can be pretty hard to find the best locations around you for the specific thing you want to do. You are a tourist and want to make sure to not miss any important sight that is just around the corner? You just arrived in a yet unknown city to attend a workshop and need to get around quickly, find an ATM and your hotel in time? Or you just moved in and want to experience the best local restaurants, bars and events nearby? We have the perfect solution for all of these cases!</p>
+					      <p>If you are new in a city - whether as a tourist, a workshop participant or a new inhabitant - it can be pretty hard to find the best locations around you for the specific thing you want to do. You are a tourist and want to make sure to not miss any important sight that is just around the corner? You just arrived in a yet unknown city to attend a workshop and need to get around quickly, find an ATM and your hotel in time? Or you just moved in and want to experience the best local restaurants, bars and events nearby? We have the perfect solution for all of these cases! my mobile app shows you important places that are just around the corner by augmenting the real world with different markers that indicate your goal. Just hold the phone in front of you and turn around while you see all the important places and their distance from your current position.
+
+                              According to your use case you can even filter what should be displayed. Let the app show you famous monuments and historic buildings on your holiday trip until you get hungry and change the filter to only see the best restaurants nearby.
+
+                              When arriving in the city of your next workshop you can highlight the position of the hotel that was already booked for you and easily find the workshop location when you arrive at the nearest train station.
+
+                              If you just moved in, your top priority might be to know the most important shops for your daily grocery shopping. If you are vegetarian, a sushi lover or just on a low budget, the app can adapt to your needs and show you only what is really relevant to you.
+
+                           </p>
 
 					      <div class="categories">ios Development</div>			               
 					   </div>
@@ -559,7 +582,7 @@
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="#">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -568,18 +591,22 @@
 				   <div id="modal-05" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-lighthouse.jpg" alt="" />
+                            <div class="fluid-video-wrapper">
+                                <iframe src="http://player.vimeo.com/video/264587635?title=0&amp;byline=0&amp;portrait=0&amp;color=F64B39" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+                            </div>
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Project EagleEye / The Automated search system </h4>		      
+					      <p> Project EagleEye was developed with my team at MLH prime Europe Where we won the first prize for it. 
+                              With an increasing number of disasters, resulting to as many as 600,000 deaths in last 20 years, we felt we needed to invent something to tackle this problem, this is how the idea for an automated search system came into life. Additionally with the expanding research in the field of drone technology and artificial intelligence, we decided to use these to find a solution to a problem in a way it was never done before. Our technology uses drones and facial recognition to find people who have been stranded (for example during a flood). It then sends their precise co-ordinate location in the form of a SMS. This technology could be of particular interest to disaster management teams and rescue services, who could deploy several drones when an disaster/emergency is notified and then rescue people based on their precise location. This can potentially save lifes as well as costs, and most importantly time for government bodies to react to the crisis. Another good application of this could be to rescue hikers who are stranded/unable to find way back.
+                           </p>
 
 					      <div class="categories">Web Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://devpost.com/software/automated-search-rescue-system">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
@@ -588,18 +615,21 @@
 				   <div id="modal-06" class="popup-modal slider mfp-hide">	
 
 				     	<div class="media">
-				     		<img src="images/portfolio/modals/m-salad.jpg" alt="" />
+				     		
+                            <div class="fluid-video-wrapper">
+                  <iframe src="http://player.vimeo.com/video/264587091?title=0&amp;byline=0&amp;portrait=0&amp;color=F64B39" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+                            </div>
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Room lights</h4>		      
+					      <p>Ultimate Smart home Alexa plus iOS solution when you don't want to mess with main voltage It uses 2 ESP8266 one for the light switch controlling a sorvo and another one controlling the TV</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">IOS and IOT development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="http://www.behance.net">Details</a>
+			            <a href="https://github.com/ferdinandl007/SmartHome">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
