--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
+    
+    
+    <meta name="keywords" content="ferdinand loesch,Loesch,ferdinand lösch,Lösch,ferdinand,ios  developer,touch pong,touch bar pong" />
+    <meta name="meta" content="ferdinand loesch,Loesch,ferdinand lösch,Lösch,ferdinand,ios  developer,touch pong,touch bar pong" />
+
 
    <!--- basic page needs
    ================================================== -->
