--- a/styles.html
+++ b/styles.html
@@ -91,7 +91,7 @@
 
    			<h1>Welcome to my blog</h1>
 
-   			<p class="lead"></p>   			
+   			<p class="lead">Sorry currently  there aren't any blog post yet please check back in a couple weeks</p>   			
 
    		</div>
 
