--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <!--[if IE 9 ]><html class="no-js oldie ie9" lang="en"> <![endif]-->
 <!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-    
-    
-    <meta name="keywords" content="ferdinand loesch,Loesch,ferdinand lösch,Lösch,ferdinand,ios  developer,touch pong,touch bar pong" />
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118008531-1"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-118008531-1');
+	</script>
+
+
+	<meta name="keywords" content="ferdinand loesch,Loesch,ferdinand lösch,Lösch,ferdinand,ios  developer,touch pong,touch bar pong" />
     <meta name="meta" content="ferdinand loesch,Loesch,ferdinand lösch,Lösch,ferdinand,ios  developer,touch pong,touch bar pong" />
 
 
