--- a/Blog.html
+++ b/Blog.html
@@ -4,8 +4,21 @@
 <!--[if (gte IE 9)|!(IE)]><!--><html class="no-js" lang="en"> <!--<![endif]-->
 <head>
 
-   <!--- basic page needs
-   ================================================== -->
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118008531-1"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-118008531-1');
+	</script>
+
+
+	
+	<!--- basic page needs
+    ================================================== -->
    <meta charset="utf-8">
 	<title>Blog</title>
 	<meta name="description" content="">  
