--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Hello, World.</h5>
+	   			<h5>Hello World!</h5>
 	   			<h1>I'm Ferdinand Loesch</h1>
 
 	   			<p class="intro-position">
