--- a/index.html
+++ b/index.html
@@ -805,20 +805,6 @@
 
 			   </div> <!-- /service -->
 
-				<div class="service">
-
-					<span class="icon"><i class="icon-toggles"></i></span>	              
-
-	            <div class="service-content">
-
-	            	<h3>UI/UX Design</h3>
-
-		            <p class="desc">Are you looking  for intuitive and innovative UI and UX  in your  software applications,  Well then you came to the right place.  I offer  UI and  UX  design  for  a ride range of applications  including   iOS, Mac OS,  Watch OS,  and  web apps.  Just leave me a message detailing the project and and use cases and I  will create a concept  for you.
-	         		</p> 
-	         		
-	            </div>                
-
-				</div> <!-- /service -->
 
 
 
@@ -846,7 +832,7 @@
 
 	            	<h3>Software Engineering</h3>
 
-		            <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.
+		            <p class="desc">Are you in need of a custom Software solution, for your business or you have a crazy idea. just contact me via the contact form, I offer full project development  meaning you give me your specifications of the project i will  evaluate feasibility  and if  feasible I will build it for you!
 	        			</p> 
 
 	            </div>	               
