--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
 					      <h4>Watch calculator</h4>		      
 					      <p>Now you can do even more on your watch with watch calculator professional V2.1.0 With this calculator you can perform simple calculations as well as calculate percentages with the built-in tip calculator. You can even convert imperial measurements to metric or visa versa. In addition it supports complications on Apple Watch. This means you can launch it straight from your watch face making it very convenient anywhere. It does not require an active connection to your iPhone, so you can even use it in airplane mode or when your iPhone is not with you.</p>
 
-					      <div class="categories">Watch Development</div>			               
+					      <div class="categories">WatchKit Development</div>			               
 					   </div>
 
 			         <div class="link-box">
@@ -700,13 +700,16 @@
 
 					   <div class="description-box">
 					      <h4>Gut Grambow App</h4>		      
-					      <p>This is Our Beautifully designed quiz which provides helpful feedback to to improve your knowledge in the subject it also allows teachers to access individual student records Will account -based system</p>
+					      <p>The Gut Gramow App is an intuitive easy-to-use learning solution.
+                            I have designed and developed this app for Jagdschule Gut Grambow to allow their students to pick up the subject material in an easy-to-use and fun way. The app offers thousands of multiple-choice questions.  Which the students have to answer then the app gathers data about the students learning patterns and in which subjects the student needs help with.
+                            This information is then passed on to the teacher via the teacher App this app outlines the performance of each student and suggests which students meet the most amount of help to acquire their hunting license.
+                            The app is coded entirely and swift and firebase at the back end and  handling the account system.</p>
 
-					      <div class="categories">Branding</div>			               
+					      <div class="categories">iOS Development</div>			               
 					   </div>
 
 			         <div class="link-box">
-			            <a href="#">Details</a>
+			            <a href="https://itunes.apple.com/us/app/jagdprüfung-gut-grambow/id661647259?mt=8">Details</a>
 					      <a href="#" class="popup-modal-dismiss">Close</a>
 			         </div>		      
 
