--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
 	   				<div class="timeline-header">
 	   					<h3>JamJar Technologies</h3>
-	   					<p>August 2018 - Present</p>
+	   					<p>August 2018 - Sep 2018</p>
 	   				</div>
 
 	   				<div class="timeline-content">
