--- a/index.html
+++ b/index.html
@@ -175,28 +175,28 @@
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent95"><span>95%</span></div>
+				   	<div class="progress percent95"><span>Strong</span></div>
 				   	<strong>Swift</strong>
 				   </li>
 
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
+				   	<div class="progress percent90"><span>Strong</span></div>
 				   	<strong>Java</strong>
 				   </li>
 
 
 					<li>
-						<div class="progress percent75"><span>75%</span></div>
+						<div class="progress percent75"><span>Strong</span></div>
 						<strong>Python</strong>
 					</li>
 
 					<li>
-						<div class="progress percent75"><span>75%</span></div>
+						<div class="progress percent85"><span>Strong</span></div>
 						<strong>C and C++</strong>
 					</li>
 
 				   <li>
-				   	<div class="progress percent50"><span>50%</span></div>
+				   	<div class="progress percent50"><span>Familiar</span></div>
 				   	<strong>Objective-C</strong>
 				   </li>
       
