--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
    				</li>
    				<li>
    					<strong>Website:</strong>
-   					<span>www.ferdinandloesch.cf</span>
+   					<span>ferdinandl007.github.io</span>
    				</li>
    				<li>
    					<strong>Email:</strong>
