--- a/index.html
+++ b/index.html
@@ -328,7 +328,29 @@
 											 YouTube, AdWords, and 3PAS</p>
 								</div>
 	 
-							</div> <!-- /timeline-block -->
+						</div> <!-- /timeline-block -->
+
+
+						<div class="timeline-block">
+
+							<div class="timeline-ico">
+								<i class="fa fa-briefcase"></i>
+							</div>
+ 
+							<div class="timeline-header">
+								<h3>Oxford Brookes University</h3>
+								<p>Mar 2019 - Present</p>
+							</div>
+ 
+							<div class="timeline-content">
+								<h4>Research Assistant</h4>
+								<p>The gTech Product & Tools Operations team is responsible for making it easy for gTech to service ads at 10x scale,
+									 and help drive business growth for teams supporting Google’s advertiser specific platform and media products including
+										DoubleClick Campaign Manager, DoubleClick Bid Manager, DoubleClick Search, DoubleClick Ad Exchange, DoubleClick Rich Media,
+										 YouTube, AdWords, and 3PAS</p>
+							</div>
+ 
+					</div> <!-- /timeline-block -->
 
 
         	<div class="timeline-block">
