--- a/index.html
+++ b/index.html
@@ -344,10 +344,9 @@
  
 							<div class="timeline-content">
 								<h4>Research Assistant</h4>
-								<p>The gTech Product & Tools Operations team is responsible for making it easy for gTech to service ads at 10x scale,
-									 and help drive business growth for teams supporting Google’s advertiser specific platform and media products including
-										DoubleClick Campaign Manager, DoubleClick Bid Manager, DoubleClick Search, DoubleClick Ad Exchange, DoubleClick Rich Media,
-										 YouTube, AdWords, and 3PAS</p>
+								<p>Performance Augmentation Lab 
+									School of Engineering, Math, and Computing 
+									Mixed reality applications development</p>
 							</div>
  
 					</div> <!-- /timeline-block -->
