--- a/index.html
+++ b/index.html
@@ -139,9 +139,8 @@
 
                 <img alt="Profile Picture" src="images/profile-pic.jpg">
 
-                <p class="lead"> I'm a passionate CS Student and iOS Developer. With the great interest in
-                    Computer-vision, Machine learning, iOT and Robotics with my major currently focusing in this field
-                    of study.</p>
+                <p class="lead"> Software Engineer with a concentration in robotic engineering and Entrepreneurship & Innovation.
+                    Primary skills include software engineering, robotics, Machine learning, project management, business development. My goal is to be a polymath.</p>
             </div>
 
         </div>
@@ -178,28 +177,28 @@
 
             <ul class="skill-bars">
                 <li>
-                    <div class="progress percent95"><span>Strong</span></div>
+                    <div class="progress percent95"></div>
                     <strong>Swift</strong>
                 </li>
 
                 <li>
-                    <div class="progress percent90"><span>Strong</span></div>
+                    <div class="progress percent90"></div>
                     <strong>Java</strong>
                 </li>
 
 
                 <li>
-                    <div class="progress percent75"><span>Strong</span></div>
+                    <div class="progress percent75"></div>
                     <strong>Python</strong>
                 </li>
 
                 <li>
-                    <div class="progress percent85"><span>Strong</span></div>
+                    <div class="progress percent85"></div>
                     <strong>C and C++</strong>
                 </li>
 
                 <li>
-                    <div class="progress percent50"><span>Familiar</span></div>
+                    <div class="progress percent50"></div>
                     <strong>Objective-C</strong>
                 </li>
 
@@ -517,13 +516,31 @@
 
             <div class="timeline-wrap">
 
+                <div class="timeline-block">
+                    <div class="timeline-ico">
+                        <i class="fa fa-star"></i>
+                    </div>
+                    <div class="timeline-header">
+                        <a href="https://devpost.com/software/pocket-labs">
+                            <h3>OxfordHack</h3></a>
+                        <p>November 2019</p>
+                    </div>
+                    <div class="timeline-content">
+                        <h4>Arm sponsor prize for ML based malaria detection system</h4>
+                        <p>A fully automated malaria detection system powered by a small usb microscope and with a companion iPhone app that allows operators to easily keep track of the tests that they have administered
+                            it leverages a custom build neural network for image classification.</p>
+                    </div>
+
+                </div> <!-- /timeline-block -->
+
+
 
                 <div class="timeline-block">
                     <div class="timeline-ico">
                         <i class="fa fa-star"></i>
                     </div>
                     <div class="timeline-header">
-                        <a href="https://imaginecup.microsoft.com/en-US/Member/WinnerCertificate/8785211?compId=17778&teamId=134682">
+                        <a href="https://imaginecup.microsoft.com/en-US/Member/WinnerCertificate?userid=sPkgtfKj4LsnukdIhd3b4A%253d%253d&compId=emuubwj%252bn7pN6qzFJYHmvw%253d%253d&teamId=1zSV9GOla8vV3fr4kk1Zwg%253d%253d">
                             <h3>Microsoft</h3></a>
                         <p>May 2019</p>
                     </div>
@@ -566,7 +583,8 @@
 
 
                     <div class="timeline-header">
-                        <h3>Apple inc.</h3>
+
+                        <a href="https://www.spiegel.de/netzwelt/gadgets/apple-wwdc-2018-sag-auf-einer-party-nie-dass-du-was-mit-computern-machst-a-1210593.html"><h3>Apple inc.</h3></a>
                         <p>April 2018</p>
                     </div>
 
@@ -583,7 +601,7 @@
                         <i class="fa fa-star"></i>
                     </div>
                     <div class="timeline-header">
-                        <h3>TechCrunch Disrupt Berlin</h3>
+                        <a href="https://youtu.be/mEfLPJm_7GQ?t=4215"><h3>TechCrunch Disrupt Berlin</h3></a>
                         <p>December 2017</p>
                     </div>
                     <div class="timeline-content">
