--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
         <div class="col-six tab-full">
 
             <h3>Skills</h3>
-            <p> I'm a quick learner who loves working in teams with most my team working experience gained in
-                hackathons. I am also proficient in a wide range of programming languages</p>
+            <p> I'm a quick learner who loves working in teams As it allows me to utilise my leadership skills.
+                I am also proficient in a wide range of programming languages</p>
 
             <ul class="skill-bars">
                 <li>
@@ -229,8 +229,13 @@
             <h5>Resume</h5>
             <h1>ABOUT ME</h1>
 
-            <p class="lead">i am a i0S/MacOS Developer skilled at technical leadership, communication and presentations.
-                Experienced in full stack developmet also speak German and English Natively</p>
+            <p class="lead">I love immersing myself at the intersection where emerging innovations
+                meets business practicalities. My most favourite experience is in executing a project that combines my
+                engineering knowledge and programming experience with entrepreneurial understanding; Finderr, which aims
+                to give independence to people with visual disabilities. By providing a quick and easy way to find lost
+                items around the house by leveraging the advances in Machine Learning, for sub centimetre object tracking
+                in 3D Space, and SLAM for indoor navigation.
+            </p>
 
         </div>
     </div> <!-- /section-intro-->
@@ -264,13 +269,12 @@
                         <ul>
                             <li>GPA: 4.0 out of 4.0</li>
 
-                            <li>Modules completed: Understanding Programming, Foundations of Computer Systems,
+                            <li>Understanding Programming, Foundations of Computer Systems,
                                 Introductory Robotics (1 and 2), Professional Software System Design, Discrete
-                                Mathematics,
-                                Introduction to Object Oriented Programming, Data Structures and Algorithms,
-                                Software Development with C and C++ Advanced Robotics (double), Innovative Product
-                                Development(double),
-                                Foundations of Computation, Robotics Systems Engineering.
+                                Mathematics, Introduction to Object Oriented
+                                Programming, Data Structures and Algorithms, Software Development with C
+                                and C++ Advanced Robotics (double), Innovative Product Development(double),
+                                Foundations of Computation, Robotics Systems Engineering., Machine learning
                             </li>
                         </ul>
 
@@ -327,14 +331,10 @@
                     </div>
 
                     <div class="timeline-content">
-                        <h4>Software Engineer Intern gPTO (Tools)</h4>
-                        <p>The gTech Product & Tools Operations team is responsible for making it easy for gTech to
-                            service ads at 10x scale,
-                            and help drive business growth for teams supporting Google’s advertiser specific platform
-                            and media products including
-                            DoubleClick Campaign Manager, DoubleClick Bid Manager, DoubleClick Search, DoubleClick Ad
-                            Exchange, DoubleClick Rich Media,
-                            YouTube, AdWords, and 3PAS</p>
+                        <h4>Web Solutions Engineer Intern</h4>
+                        <p>Contributed to accessibility in Hangouts Chat (iOS) by introducing a new speech to text feature on messages which supports 30+ languages and now running in production.
+                            In addition I worked on extending a internal Bug management tool to intelligently
+                            rank important Bugs on a broad set of features to increase communication updates between eng and support.</p>
                     </div>
 
                 </div> <!-- /timeline-block -->
