--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 
                 <p class="intro-position">
                     <span>Full stack Developer</span>
+                    <samp>Software Engineer</samp>
                     <span>UI/UX Designer</span>
                 </p>
 
