--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
 
                     <div class="timeline-header">
                         <h3>Oxford Brookes University</h3>
-                        <p>September 2017 - Present</p>
+                        <p>September 2017 - May 2020</p>
                     </div>
 
                     <div class="timeline-content">
@@ -343,6 +343,27 @@
         <div class="col-twelve">
 
             <div class="timeline-wrap">
+
+
+                <div class="timeline-block">
+                    <div class="timeline-ico">
+                        <i class="fa fa-briefcase"></i>
+                    </div>
+
+                    <div class="timeline-header">
+                        <h3>Bloomberg LP</h3>
+                        <p>June 2020 - October 2020</p>
+                    </div>
+
+                    <div class="timeline-content">
+                        <h4> Software Engineer intern</h4>
+                        <p>Mobile Shared Services Team</p>
+                    </div>
+
+                </div> <!-- /timeline-block -->
+
+
+
                 <div class="timeline-block">
                     <div class="timeline-ico">
                         <i class="fa fa-briefcase"></i>
@@ -350,14 +371,14 @@
 
                     <div class="timeline-header">
                         <h3>Google</h3>
-                        <p>June 2019 - Present</p>
+                        <p>June 2019 - September 2019</p>
                     </div>
 
                     <div class="timeline-content">
                         <h4>Web Solutions Engineer Intern</h4>
-                        <p>Contributed to accessibility in Hangouts Chat (iOS) by introducing a new speech to text feature on messages which supports 30+ languages and now running in production.
-                            In addition I worked on extending a internal Bug management tool to intelligently
-                            rank important Bugs on a broad set of features to increase communication updates between eng and support.</p>
+                        <p>- I worked on internal tools, implementing back-end data processing pipelines in Java, and front end development in typescript and angular 2.
+                            - Contributed to accessibility in the Hangouts Chat iOS app by implementing a new speech to text feature on messages in Objective-C which supports 30+ languages and now running in production.
+                        </p>
                     </div>
 
                 </div> <!-- /timeline-block -->
@@ -393,7 +414,7 @@
 
                     <div class="timeline-header">
                         <h3>Oxford Brookes University</h3>
-                        <p>Mar 2019 - Present</p>
+                        <p>Mar 2019 - October 2019</p>
                     </div>
 
                     <div class="timeline-content">
