--- a/index.html
+++ b/index.html
@@ -287,18 +287,12 @@
                     </div>
 
                     <div class="timeline-content">
-                        <h4>Bs computer science</h4>
+                        <h4>Computing for Robotic Systems, BSc</h4>
 
                         <ul>
+                            <li>Graduation Great: First Class Honours</li>
+                            
                             <li>GPA: 4.0 out of 4.0</li>
-
-                            <li>Understanding Programming, Foundations of Computer Systems,
-                                Introductory Robotics (1 and 2), Professional Software System Design, Discrete
-                                Mathematics, Introduction to Object Oriented
-                                Programming, Data Structures and Algorithms, Software Development with C
-                                and C++ Advanced Robotics (double), Innovative Product Development(double),
-                                Foundations of Computation, Robotics Systems Engineering., Machine learning
-                            </li>
                         </ul>
 
 
